--- a/kfes-react-app/src/styles/style.scss
+++ b/kfes-react-app/src/styles/style.scss
@@ -549,6 +549,7 @@ span {
 				}
 				&.korea-ticket-anchor{
 					background: #00AEF0;
+					position: relative;
 					&:before{
 						position: absolute;
 						top: 10%;
