Add Banners and Event List component

--- a/views/events.html
+++ b/views/events.html
@@ -40,11 +40,11 @@
                 </div>
             </a>
 
-            <!-- <a href="#korea-indonesia-film-festival" title="Korea Indonesia Film Festival">
+            <a href="#korea-indonesia-film-festival" title="Korea Indonesia Film Festival">
                 <div class="banner-slide-item" align="center">
                     <img class="bg-slider" src="https://ecm-prd-pub.s3.ap-southeast-1.amazonaws.com/kfestival/assets/img/billboards/mbb_koreanculture.jpg" width="100%" alt="Korea - Indonesia 10th Film Festival Billboard">
                 </div>
-            </a> -->
+            </a>
             
             <!-- -->
         </div>
@@ -494,36 +494,6 @@
                     </a>
                 </div>
             </div>
-
-            <!-- <div class="col-xs-12 event-list-item row">
-                <div class="col-xs-2 col-md-1 event-item-thumbnail k-performance">
-                    <div class="col-xs-12 event-date-day" align="left">
-                        26
-                    </div>
-                    <div class="col-xs-12 event-date-month">
-                        OKT
-                    </div>
-                </div>
-
-                <div class="col-xs-5 col-md-3 event-thumb">
-                    <a href="#jakarta-gugak-festival" title="Jakarta Gugak Festival">
-                        <img src="https://ecm-stg-pub.s3.ap-southeast-1.amazonaws.com/kfestival/assets/img/events/%5BPoster%5DJakarta%20Gukak%20Festival.jpg" width="100%" alt="Jakarta Gugak Festival Thumbnail"/>
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-8 event-item-caption">
-                    <a href="#jakarta-gugak-festival" title="Jakarta Gugak Festival">
-                        <h3>Jakarta Gugak Festival</h3>
-                    </a>
-                    <a href="https://g.page/artpreneur" title="Ciputra Artpreneur Theater" >
-                        <h4>Ciputra Artpreneur Theater</h4>
-                    </a>
-                    <label class="event-label">K-PERFORMANCE</label>
-                    <p class="excerpt hidden-xs">Promosi pertukaran budaya dari kedua negara melalui gabungan pertunjukan seni Tradisional Korea dan Indonesia.</p>
-                    <a href="#jakarta-gugak-festival" title="Jakarta-Gugak-Festival" class="view-button hidden-xs">
-                        VIEW DETAIL <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </div>
-            </div> -->
             
             <div class="col-xs-12 event-list-item row">
                 <div class="col-xs-2 col-md-1 event-item-thumbnail k-exhibition">
@@ -711,9 +681,7 @@
             </div>
 
         </div>
-        <!-- <div class="col-xs-12" align="right">
-            <a class="fColor-purple" href="javascript:void(0);" onclick="$('a[aria-controls=event]').click(); $('html, body').animate({scrollTop: $('#event-all').offset().top}, 'slow');">CLICK FOR MORE EVENTS >>></a>
-        </div> -->
+        
     </section>
 
     <section class="col-xs-12 section section-calendar">
