--- a/kfes-react-app/src/styles/style.scss
+++ b/kfes-react-app/src/styles/style.scss
@@ -1221,6 +1221,7 @@ span {
 							border-radius: 3px;
 							position: absolute;
 							right: -18px;
+							top: 0;
 							@media only screen and (max-width: 767px) {
 								width: 15px;
 								height: 15px;
