--- a/kfes-react-app/src/styles/style.scss
+++ b/kfes-react-app/src/styles/style.scss
@@ -445,7 +445,7 @@ span {
 	// top: 0;
 	// z-index: -1;
 	@media only screen and (max-width: 992px){
-		margin-top: 50px;
+		// margin-top: 50px;
 	}
 }
 .slick-dots li button:before {
@@ -488,6 +488,7 @@ span {
 		border-bottom: 0 !important;
 		position: absolute;
 		text-align: center;
+		flex-wrap: nowrap;
 		display: flex;
 		width: 100%;
 		justify-content: center;
@@ -1936,7 +1937,7 @@ span {
 		}
 	}
 	label {
-		color: $color_calendar;
+		color: #444444;
 		margin-left: 5px;
 		margin-right: 15px;
 		position: relative;
@@ -2000,11 +2001,39 @@ span.circle {
 		}
 	}
 }
+
+.fc-day-number {
+	color: #555555;
+	text-align: center !important;
+	font-weight: bold;
+}
+
 .fc-event {
 	font-family: $font_helvetica;
 	// font-size: 7px !important;
 	// font-weight: 700;
+	.fc-title{
+		color: white;
+		font-size: 12px;
+		@media only screen and (max-width: 768px) {
+			font-size: 10px;
+		}
+	}
+	
 }
+
+.section-seo{
+	font-size: 0.8em;
+	h2{
+		font-weight: 700 !important;
+	}
+	p{
+		@media only screen and (max-width: 768px) {
+			font-size: 12px;
+		}
+	}
+}
+
 th.fc-day-header.fc-widget-header {
 	background: $color_white;
 	color: $color_calendar;
@@ -2197,7 +2226,7 @@ th.fc-day-header.fc-widget-header {
 		left: -20px;
 	}
 	.map-containerx {
-		margin: 0 -30px;
+		// margin: 0 -30px;
 		width: auto;
 	}
 	.map-container-y {
