--- a/kfes-react-app/src/styles/style.scss
+++ b/kfes-react-app/src/styles/style.scss
@@ -1569,6 +1569,7 @@ span {
 }
 
 .event-detail {
+	padding-top: 30px;
 	background: white;
 	font-family: $font_gibson_regular;
 	color: $color_article;
