--- a/kfes-react-app/src/styles/style.css
+++ b/kfes-react-app/src/styles/style.css
@@ -751,11 +751,14 @@ span:hover.btn-link {
 .tab-content #home b {
   font-family: "Helvetica Neue"; }
 .tab-content #home .section-navigation {
-  margin-top: 15px; }
+  padding: 15px;
+  padding-bottom: 20px; }
   @media only screen and (min-width: 768px) {
     .tab-content #home .section-navigation {
       padding-left: 30px;
       padding-right: 30px; } }
+  .tab-content #home .section-navigation a {
+    cursor: pointer; }
   .tab-content #home .section-navigation .live-now-wrapper {
     display: inline-block; }
     .tab-content #home .section-navigation .live-now-wrapper .live-now {
@@ -803,7 +806,6 @@ span:hover.btn-link {
     color: #454F63;
     font-family: "Gibson Semibold";
     font-size: 15px;
-    margin-right: 15px;
     margin-left: 15px;
     display: flex;
     align-items: center;
@@ -828,7 +830,9 @@ span:hover.btn-link {
       margin-right: 5px; }
 .tab-content #home .section.section-banner {
   display: block;
-  padding: 0;
+  padding: 15px;
+  padding-right: 30px;
+  padding-left: 30px;
   margin-bottom: 75px; }
   @media only screen and (max-width: 500px) {
     .tab-content #home .section.section-banner {
@@ -1167,6 +1171,9 @@ span:hover.btn-link {
     .tab-content #home .section.section-other .footer-thumb .footer-thumb-list .thumbnail-hover:hover {
       opacity: 1; }
 
+.tab-content {
+  background: white; }
+
 .event-detail {
   padding-top: 30px;
   background: white;
@@ -1473,7 +1480,8 @@ span.circle {
   color: #454F63;
   font-size: 14px;
   border-radius: 5px;
-  font-weight: 100; }
+  font-weight: 100;
+  text-transform: uppercase; }
 
 .fc-day-grid-event > .fc-content {
   white-space: pre-wrap !important;
